@@ -1,3 +1,7 @@
+2003-01-27 Simon Waters <Simon@wretched.demon.co.uk>
+
+	* Stop output of result in iterate if game has ended already.
+
 2003-01-13 Simon Waters <Simon@wretched.demon.co.uk>
 
 	* Add time.h to common.h to define timeval on Cygwin
